feat: add score and winner to the team match.
